client/src/App.css
/* General */
body {
    background-color: #E6E6E6;
}

div.content {
    margin-left: 300px;
    padding: 1rem;
}

/* Navigation Menu */
.sidebar {
    margin: 0;
    padding: 0;
    width: 300px;
    background-color: #2b3242;
    position: fixed;
    height: 100%;
    overflow: auto;
}

.sidebar-header {
    display: flex;
    padding: 1rem;
}

.sidebar button {
    width: 94%;
    margin: 3%;
    padding: 1rem;
    color: #E6E6E6;
    background-color: #2b3242;
}

.sidebar button:hover {
    color: #2b3242;
    background-color: #E6E6E6;
}

.sidebar h1 {
    margin-left: 1rem;
    margin-top: 0.1rem;
    font-size: 2rem;
    color: #E6E6E6;
}
  
.sidebar a {
    display: block;
    color: #E6E6E6;
    padding: 1rem;
    text-decoration: none;
    border-left: 0.2rem #2b3242 solid;
    border-bottom: 0.1rem #e6e6e610 solid;
}

.sidebar a.active {
    border-left: 0.2rem #E6E6E6 solid;
}

.sidebar a:hover:not(.active) {
    border-left: 0.2rem #E6E6E6 solid;
    background-color: #353e52;
}

#add-item-button {
    margin-bottom: 0;
}

/* On screens that are less than 700px wide, make the sidebar into a topbar */
@media screen and (max-width: 700px) {
    .sidebar {
        width: 100%;
        height: auto;
        position: relative;
    }
    .sidebar a {float: left;}
    div.content {margin-left: 0;}
}

/* On screens that are less than 400px, display the bar vertically, instead of horizontally */
@media screen and (max-width: 400px) {
    .sidebar a {
        text-align: center;
        float: none;
    }
}

/* Emission Table */
.emission-table {
    margin: 1rem;
    font-size: 0.8rem;
}

.table thead th, .table td, .table th {
    vertical-align: middle;
}

.delete-item-button {
    background-color: transparent;
    border: white;
    margin: 0.5rem;
}

.delete-item-button:hover {
    background-color: #cacaca;
}

/* Emission Table Pagination */
.pagination {
    display: flex;
    justify-content: flex-end;
    padding: 1rem;
}

.page-link, .page-link:hover {
    color: #2b3242;
}

.page-item.active .page-link {
    background-color: #2b3242;
    border-color: #2b3242;
}

/* Emission Chart */
.emission-graph {
    padding: 2rem;
    padding-top: 0;
}

/* Login Page */
.navbar {
    background-color: #040D21;
    color: white;
}

.navbar a {
    color: white;
}

.login-left {
    height: 100vh;
    background-color: #E6E6E6;
}

.login-right {
    height: 100vh;
    background-color: #d1d1d1;
}

.login-box {
    background-color: #ececec;
    padding: 4rem;
    box-shadow: 0 5px 10px 1px rgba(0, 0, 0, 0.1);
    border-radius: 2rem;
}

.login-box button {
    margin-top: 1rem;
    width: 100%;
    border-radius: 1rem;
}

.register-button {
    background-color: #EE6382;
    border-color: #EE6382;
}

.login-button {
    background-color: #040D21;
    border-color: #040D21;
}

/* Dashboard */
.dashboard h1 {
    font-size: 2rem;
}

.dashboard-panel {
    margin-bottom: 1rem;
    box-shadow: 0 5px 10px 1px rgba(0, 0, 0, 0.1);
    border-radius: 20px;
    background-color: #f5f5f5;
}

.dashboard-panel h2 {
    font-size: 1.5rem;
    text-align: center;
    border-radius: 20px 20px 0 0;
    background-color: #2b3242;
    color: #f5f5f5;
    padding: 1rem;
    margin-bottom: 0;
}

.year-input {
    background-color: #f5f5f5;
    width: 6rem;
    margin: 0.5rem;
}

